add insert sql statements for all tables add test for chiffreAffaires() in ExpositionRepository add controller add small changes in html file

--- a/src/main/resources/templates/myTemplate.html
+++ b/src/main/resources/templates/myTemplate.html
@@ -10,6 +10,12 @@
 <body>
 	<h1>Exemple</h1>
 	<h2 th:text="${message}">My Thymeleaf Error Page</h2>
+        
+        <p th:if="${#lists.isEmpty(prenoms)}">Aucune galerie à afficher</p>
+        
+        <ul th:unless="${#lists.isEmpty(prenoms)}">
+            <li th:each="g : ${listegaleries}" th:text="${g}"/>
+        </ul>
 </body>
 
 </html>
